[package]
name = "wkhtmltopdf-cluster"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
clap = "=3.0.0-beta.1"
zmq = "0.9"
wkhtmltopdf = "0.3.0"
