[package]
name = "wkhtmltopdf-cluster"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.1"
zmq = "0.9"
wkhtmltopdf = { version = "0.3.0", path = "../wkhtmltopdf-rs" }
wkhtmltox-sys = "0.1.0"
ctrlc = "3.1.7"
sysinfo = "0.15.3"
serde_json = "1.0"
url = "2.1"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
zmq = { version = "0.9", features = ["vendored"] }
